# healthcare

./: .gitignore  CNAME  Cargo.toml  ENHANCED_CONTRIBUTOR_VERIFICATION.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FRAUD_DETECTION_DOCUMENTATION.md  MULTI_TOKEN_PREMIUM_SUPPORT.md  PR_DESCRIPTION.md  RATE_LIMITING_DOCUMENTATION.md  README.md  REAL_TIME_PROCESSING_DOCUMENTATION.md
.github/workflows/: ci-cd.yml  deploy-pages.yml
Web-client/: package-lock.json  package.json
Web-client/src/: hadmin.js  index.js  insurance.js  ladmin.js  patient.js  web3.js
backend/: Dockerfile  README.md  package-lock.json  package.json  server.js
backend/blockchain/: smartContractManager.js
backend/middleware/: auth.js
backend/routes/: claims.js  patients.js
backend/services/: aiOracleService.js  loggingService.js
docs/: CI-CD-DEPLOYMENT-GUIDE.md  CI-CD-IMPLEMENTATION-SUMMARY.md  CI-CD-PIPELINE-COMPREHENSIVE.md  CONTRIBUTING.md  CONTRIBUTOR-GUIDE.md  ISSUES_AND_ACCEPTANCE_CRITERIA.md  PLATFORM-LAUNCH-STRATEGY.md  REPOSITORY-NAME-CHANGE.md  WEB3-CONTRIBUTOR-PLATFORM.md
frontend/: config-overrides.js  nginx.conf  package-lock.json  package.json
k8s/: README.md  backend-deployment.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  istio-gateway.yaml  istio-security.yaml  istio-telemetry.yaml  namespace.yaml  network-policy.yaml  rbac.yaml
scripts/: build.sh  deploy.rs  deploy.sh
src/: enhanced_contributor_tests.rs  integration_tests.rs  lib.rs  main.rs  medichain_platform.rs  multi_token_tests.rs  rate_limiting.rs  rate_limiting_backup.rs  real_time_processing.rs  tests.rs
(+16 files in other folders)
