[package]
name = "medichain-platform"
version = "2.0.0"
edition = "2021"
authors = ["akordavid373 <akordavid373@gmail.com>"]
description = "MediChain - Blockchain-based healthcare insurance platform with multi-token premium payments, AI-driven adjustments, and Stellar DEX integration"
license = "MIT"

[lib]
name = "medichain"
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "medichain-platform"
path = "src/main.rs"
